--- a/style.css
+++ b/style.css
@@ -1,4 +1,23 @@
-.img-logo{
-    width: 138px;
-   
+.carousel-item-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: white;
+}
+.navBarMargin {
+  margin-bottom: 100px;
+}
+.nex-icon {
+  width: 5%;
+}
+.prev-icon {
+  width: 5%;
+}
+.overly-slider-img {
+  background-color: rgba(21, 21, 21, 0.461);
+  height: 89.5vh;
+  width: 98.8%;
+  position: absolute;
 }
