--- a/style.css
+++ b/style.css
@@ -37,3 +37,11 @@
         min-width: 100%!important;
         min-height: 80px !important;
     }
+@media only screen and (max-width: 765px) {
+  .carousel-item p {
+    font-size: 13px;
+  }
+  .carousel-item h1{
+    font-size: 20px;
+  }
+}
